// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text is rendered without crashes 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "black": "#262B34",
          "blackLight": "#5f656b",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "red": "#f04540",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellowLight": "#FFF9DD",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber>
        <WithStyles(Text)
          className=""
          innerRef={null}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "0": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi-",
                "generateId": [Function],
              },
            }
          }
          overrides={Object {}}
          size="medium"
          theme={
            Object {
              "colors": Object {
                "black": "#262B34",
                "blackLight": "#5f656b",
                "disabledGrey": "#ced4d9",
                "green": "#86AD20",
                "greenLight": "#e7f1d5",
                "grey": "#697782",
                "greyLight": "#f0f3f5",
                "greySoft": "#788590",
                "lines": "#dce3eb",
                "link": "#216db3",
                "linkDark": "#174a79",
                "overlay": "rgba(33,33,33,0.55)",
                "placeholders": "#e1e4e7",
                "placeholdersHover": "#d0d4d8",
                "primary": "#FF8C00",
                "primaryDark": "#C87600",
                "primaryLight": "#fef4e6",
                "primarySoft": "#ff9d26",
                "red": "#f04540",
                "redDark": "#C43833",
                "redLight": "#FAE7E7",
                "redSoft": "#FF544F",
                "secondary": "#00A8Be",
                "secondaryGrey": "#e4eeff",
                "secondaryLight": "#D6EEF2",
                "secondarySoft": "#AADFE7",
                "shadow": "rgba(0, 0, 0, 0.25)",
                "tableHeader": "#f6f7f9",
                "tableHover": "#FAFBFC",
                "text": Object {
                  "black": "#3c4248",
                  "danger": "white",
                  "default": "#697782",
                  "green": "#86AD20",
                  "greySoft": "#788590",
                  "primary": "white",
                  "red": "#f04540",
                  "secondary": "#00A8Be",
                  "white": "#FFFFFF",
                  "yellow": "#E9B200",
                },
                "transparentBlack": "rgba(38, 43, 52, 0.8)",
                "white": "#FFFFFF",
                "yellow": "#E9B200",
                "yellowLight": "#FFF9DD",
              },
              "effects": Object {
                "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                },
              },
              "typography": Object {
                "bigText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 20,
                  "letterSpacing": 0.5,
                },
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "defaultText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 13,
                  "letterSpacing": 0.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "fontSizeSmall": 11,
                "largeText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 16,
                  "letterSpacing": 0.5,
                },
                "letterSpacing": 0.5,
                "lineHeightBase": 1.5,
                "smallText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "letterSpacing": 0.5,
                },
              },
            }
          }
          type="normal"
        >
          <Text
            className=""
            classes={
              Object {
                "big": "HoiPoi-Text-big-0-2-6",
                "bold": "HoiPoi-Text-bold-0-2-7",
                "large": "HoiPoi-Text-large-0-2-5",
                "light": "HoiPoi-Text-light-0-2-9",
                "medium": "HoiPoi-Text-medium-0-2-4",
                "normal": "HoiPoi-Text-normal-0-2-8",
                "root": "HoiPoi-Text-root-0-2-1",
                "small": "HoiPoi-Text-small-0-2-3",
                "truncateHeight": "HoiPoi-Text-truncateHeight-0-2-2",
              }
            }
            overrides={Object {}}
            size="medium"
            type="normal"
          >
            <span
              className="HoiPoi-Text-root-0-2-1 HoiPoi-Text-normal-0-2-8 HoiPoi-Text-medium-0-2-4"
            >
              Hello
            </span>
          </Text>
        </WithStyles(Text)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Text type bold 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "black": "#262B34",
          "blackLight": "#5f656b",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "red": "#f04540",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellowLight": "#FFF9DD",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber
        type="bold"
      >
        <WithStyles(Text)
          className=""
          innerRef={null}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "0": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi-HoiPoi-",
                "generateId": [Function],
              },
            }
          }
          overrides={Object {}}
          size="medium"
          theme={
            Object {
              "colors": Object {
                "black": "#262B34",
                "blackLight": "#5f656b",
                "disabledGrey": "#ced4d9",
                "green": "#86AD20",
                "greenLight": "#e7f1d5",
                "grey": "#697782",
                "greyLight": "#f0f3f5",
                "greySoft": "#788590",
                "lines": "#dce3eb",
                "link": "#216db3",
                "linkDark": "#174a79",
                "overlay": "rgba(33,33,33,0.55)",
                "placeholders": "#e1e4e7",
                "placeholdersHover": "#d0d4d8",
                "primary": "#FF8C00",
                "primaryDark": "#C87600",
                "primaryLight": "#fef4e6",
                "primarySoft": "#ff9d26",
                "red": "#f04540",
                "redDark": "#C43833",
                "redLight": "#FAE7E7",
                "redSoft": "#FF544F",
                "secondary": "#00A8Be",
                "secondaryGrey": "#e4eeff",
                "secondaryLight": "#D6EEF2",
                "secondarySoft": "#AADFE7",
                "shadow": "rgba(0, 0, 0, 0.25)",
                "tableHeader": "#f6f7f9",
                "tableHover": "#FAFBFC",
                "text": Object {
                  "black": "#3c4248",
                  "danger": "white",
                  "default": "#697782",
                  "green": "#86AD20",
                  "greySoft": "#788590",
                  "primary": "white",
                  "red": "#f04540",
                  "secondary": "#00A8Be",
                  "white": "#FFFFFF",
                  "yellow": "#E9B200",
                },
                "transparentBlack": "rgba(38, 43, 52, 0.8)",
                "white": "#FFFFFF",
                "yellow": "#E9B200",
                "yellowLight": "#FFF9DD",
              },
              "effects": Object {
                "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                },
              },
              "typography": Object {
                "bigText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 20,
                  "letterSpacing": 0.5,
                },
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "defaultText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 13,
                  "letterSpacing": 0.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "fontSizeSmall": 11,
                "largeText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 16,
                  "letterSpacing": 0.5,
                },
                "letterSpacing": 0.5,
                "lineHeightBase": 1.5,
                "smallText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "letterSpacing": 0.5,
                },
              },
            }
          }
          type="bold"
        >
          <Text
            className=""
            classes={
              Object {
                "big": "HoiPoi-HoiPoi-Text-big-0-2-15",
                "bold": "HoiPoi-HoiPoi-Text-bold-0-2-16",
                "large": "HoiPoi-HoiPoi-Text-large-0-2-14",
                "light": "HoiPoi-HoiPoi-Text-light-0-2-18",
                "medium": "HoiPoi-HoiPoi-Text-medium-0-2-13",
                "normal": "HoiPoi-HoiPoi-Text-normal-0-2-17",
                "root": "HoiPoi-HoiPoi-Text-root-0-2-10",
                "small": "HoiPoi-HoiPoi-Text-small-0-2-12",
                "truncateHeight": "HoiPoi-HoiPoi-Text-truncateHeight-0-2-11",
              }
            }
            overrides={Object {}}
            size="medium"
            type="bold"
          >
            <span
              className="HoiPoi-HoiPoi-Text-root-0-2-10 HoiPoi-HoiPoi-Text-bold-0-2-16 HoiPoi-HoiPoi-Text-medium-0-2-13"
            >
              Hello
            </span>
          </Text>
        </WithStyles(Text)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Text type light 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "black": "#262B34",
          "blackLight": "#5f656b",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "red": "#f04540",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellowLight": "#FFF9DD",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber
        type="light"
      >
        <WithStyles(Text)
          className=""
          innerRef={null}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "0": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi-HoiPoi-HoiPoi-",
                "generateId": [Function],
              },
            }
          }
          overrides={Object {}}
          size="medium"
          theme={
            Object {
              "colors": Object {
                "black": "#262B34",
                "blackLight": "#5f656b",
                "disabledGrey": "#ced4d9",
                "green": "#86AD20",
                "greenLight": "#e7f1d5",
                "grey": "#697782",
                "greyLight": "#f0f3f5",
                "greySoft": "#788590",
                "lines": "#dce3eb",
                "link": "#216db3",
                "linkDark": "#174a79",
                "overlay": "rgba(33,33,33,0.55)",
                "placeholders": "#e1e4e7",
                "placeholdersHover": "#d0d4d8",
                "primary": "#FF8C00",
                "primaryDark": "#C87600",
                "primaryLight": "#fef4e6",
                "primarySoft": "#ff9d26",
                "red": "#f04540",
                "redDark": "#C43833",
                "redLight": "#FAE7E7",
                "redSoft": "#FF544F",
                "secondary": "#00A8Be",
                "secondaryGrey": "#e4eeff",
                "secondaryLight": "#D6EEF2",
                "secondarySoft": "#AADFE7",
                "shadow": "rgba(0, 0, 0, 0.25)",
                "tableHeader": "#f6f7f9",
                "tableHover": "#FAFBFC",
                "text": Object {
                  "black": "#3c4248",
                  "danger": "white",
                  "default": "#697782",
                  "green": "#86AD20",
                  "greySoft": "#788590",
                  "primary": "white",
                  "red": "#f04540",
                  "secondary": "#00A8Be",
                  "white": "#FFFFFF",
                  "yellow": "#E9B200",
                },
                "transparentBlack": "rgba(38, 43, 52, 0.8)",
                "white": "#FFFFFF",
                "yellow": "#E9B200",
                "yellowLight": "#FFF9DD",
              },
              "effects": Object {
                "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                },
              },
              "typography": Object {
                "bigText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 20,
                  "letterSpacing": 0.5,
                },
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "defaultText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 13,
                  "letterSpacing": 0.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "fontSizeSmall": 11,
                "largeText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 16,
                  "letterSpacing": 0.5,
                },
                "letterSpacing": 0.5,
                "lineHeightBase": 1.5,
                "smallText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "letterSpacing": 0.5,
                },
              },
            }
          }
          type="light"
        >
          <Text
            className=""
            classes={
              Object {
                "big": "HoiPoi-HoiPoi-HoiPoi-Text-big-0-2-24",
                "bold": "HoiPoi-HoiPoi-HoiPoi-Text-bold-0-2-25",
                "large": "HoiPoi-HoiPoi-HoiPoi-Text-large-0-2-23",
                "light": "HoiPoi-HoiPoi-HoiPoi-Text-light-0-2-27",
                "medium": "HoiPoi-HoiPoi-HoiPoi-Text-medium-0-2-22",
                "normal": "HoiPoi-HoiPoi-HoiPoi-Text-normal-0-2-26",
                "root": "HoiPoi-HoiPoi-HoiPoi-Text-root-0-2-19",
                "small": "HoiPoi-HoiPoi-HoiPoi-Text-small-0-2-21",
                "truncateHeight": "HoiPoi-HoiPoi-HoiPoi-Text-truncateHeight-0-2-20",
              }
            }
            overrides={Object {}}
            size="medium"
            type="light"
          >
            <span
              className="HoiPoi-HoiPoi-HoiPoi-Text-root-0-2-19 HoiPoi-HoiPoi-HoiPoi-Text-light-0-2-27 HoiPoi-HoiPoi-HoiPoi-Text-medium-0-2-22"
            >
              Hello
            </span>
          </Text>
        </WithStyles(Text)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</Component>
`;
